Tech Debt with enums were fixed, refator EnumMapper as final and the respective tests were fixed